--- a/styles.css
+++ b/styles.css
@@ -24,22 +24,6 @@
   font-style: normal;
 }
 
-body {
-  width: 100%;
-  height: 100vh;
-  background-color: var(--charcoal);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-main {
-  width: 900px;
-  background-color: var(--white);
-  display: flex;
-  border-radius: 25px;
-  padding: 20px 25px 20px 25px;
-}
-
 .left-side {
   display: flex;
   flex-direction: column;
@@ -115,6 +99,7 @@ button:hover {
 }
 img {
   height: 100%;
+  width: 100%;
   border-radius: none;
 }
 
@@ -140,12 +125,22 @@ h1 {
   main {
     display: flex;
     flex-direction: column-reverse;
+    background-color: var(--white);
+    height: 100%;
+    width: 100%;
   }
   body {
-    background-color: red;
+    width: 100%;
+    height: 100vh;
   }
   .desktopImg {
     display: none;
+  }
+  .left-side {
+    height: 100%;
+  }
+  .right-side {
+    width: 100%;
   }
 }
 
@@ -153,5 +148,20 @@ h1 {
 @media (min-width: 626px) {
   .mobileImg {
     display: none;
+  }
+  body {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--charcoal);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  main {
+    width: 900px;
+    background-color: var(--white);
+    display: flex;
+    border-radius: 25px;
+    padding: 20px 25px 20px 25px;
   }
 }
