--- a/styles.css
+++ b/styles.css
@@ -23,20 +23,21 @@
   font-weight: 700;
   font-style: normal;
 }
-
-.left-side {
+body {
+  width: 100%;
+  height: 100vh;
+}
+main {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: var(--darkGray);
-  padding: 0 45px 0 40px;
+  flex-direction: column-reverse;
+  background-color: var(--white);
+}
+.desktopImg {
+  display: none;
 }
 h1 {
-  font-size: 56px;
-  margin-bottom: 25px;
-}
-p {
-  margin-bottom: 25px;
+  color: var(--darkGray);
+  font-size: 40px;
 }
 ul {
   list-style-type: none;
@@ -95,73 +96,39 @@ button:hover {
   box-shadow: 4px 3px 10px var(--tomato);
   cursor: pointer;
 }
-.right-side {
-}
-img {
-  height: 100%;
+.left-side {
   width: 100%;
-  border-radius: none;
-}
-
-/* .left-side {
-  width: 425px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  padding: 10px 30px 10px 30px;
+  margin-top: 38px;
+  padding: 10px 25px 10px 25px;
 }
-.right-side {
-  width: 425px;
-}
-h1 {
-  font-size: 56px;
-  color: var(--charcoal);
+.mobileImg {
   width: 100%;
-} */
+}
+@media (max-width: 575px) {
+}
 
 /* Small Devices (Tablets) */
-@media (max-width: 625px) {
-  main {
-    display: flex;
-    flex-direction: column-reverse;
-    background-color: var(--white);
-    height: 100%;
-    width: 100%;
-  }
-  body {
-    width: 100%;
-    height: 100vh;
-  }
-  .desktopImg {
-    display: none;
-  }
-  .left-side {
-    height: 100%;
-  }
-  .right-side {
-    width: 100%;
-  }
+@media (min-width: 576px) and (max-width: 767px) {
 }
 
 /* Medium Devices (Laptops and Desktops) */
-@media (min-width: 626px) {
+@media (min-width: 768px) and (max-width: 991px) {
+  .desktopImg {
+    display: flex;
+  }
   .mobileImg {
     display: none;
   }
-  body {
-    width: 100%;
-    height: 100vh;
-    background-color: var(--charcoal);
+}
+/* Large Devices (Desktops and Large Screens) */
+@media (min-width: 992px) {
+  .desktopImg {
     display: flex;
-    justify-content: center;
-    align-items: center;
   }
-  main {
-    width: 900px;
-    background-color: var(--white);
-    display: flex;
-    border-radius: 25px;
-    padding: 20px 25px 20px 25px;
+  .mobileImg {
+    display: none;
   }
 }
