--- a/styles.css
+++ b/styles.css
@@ -124,28 +124,60 @@ button:hover {
   object-fit: cover;
   border-radius: 0px 0px 25px 25px;
 }
-@media (max-width: 575px) {
-}
 
 /* Small Devices (Tablets) */
-@media (min-width: 576px) and (max-width: 767px) {
+@media (min-width: 576px) and (max-width: 1079px) {
+  .left-side {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  form {
+    width: 60%;
+  }
+  .h1Updated {
+    font-size: 54px;
+  }
 }
 
 /* Medium Devices (Laptops and Desktops) */
-@media (min-width: 768px) and (max-width: 991px) {
+
+@media (min-width: 1080px) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--charcoal);
+  }
+  main {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--white);
+    border-radius: 25px;
+    padding: 25px;
+  }
+  .left-side {
+    display: flex;
+    justify-content: center;
+  }
+  .right-side {
+    display: flex;
+    justify-content: flex-end;
+    height: 100%;
+  }
   .desktopImg {
     display: flex;
+    width: 100%;
+
+    height: 100%;
   }
   .mobileImg {
     display: none;
   }
-}
-/* Large Devices (Desktops and Large Screens) */
-@media (min-width: 992px) {
-  .desktopImg {
-    display: flex;
+  .h1Updated {
+    font-size: 60px;
   }
-  .mobileImg {
-    display: none;
+  ul {
+    margin-bottom: 10px;
   }
 }
